[gd_scene load_steps=30 format=3 uid="uid://cttetg1gqs7kc"]

[ext_resource type="Texture2D" uid="uid://4i7boilx82dk" path="res://addons/script_multi_plus/sme_images/godot_Close.svg" id="1_aqt5k"]
[ext_resource type="Script" uid="uid://l058mvdd8py" path="res://addons/script_multi_plus/smp_scripts/smp_finder_panel_scripts/smp_find_popup_panel.gd" id="1_k5x52"]
[ext_resource type="Script" uid="uid://d3sxjjn7u0qqu" path="res://addons/script_multi_plus/smp_scripts/smp_finder_panel_scripts/smp_find_script.gd" id="2_80u8v"]
[ext_resource type="Texture2D" uid="uid://clb3mfx5wnn25" path="res://addons/script_multi_plus/sme_images/godot_Script.svg" id="2_h7fli"]
[ext_resource type="PackedScene" uid="uid://barxjwctsyonr" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/label_extends.tscn" id="2_wv3rm"]
[ext_resource type="Script" uid="uid://txlm1sq2km56" path="res://addons/script_multi_plus/smp_scripts/smp_finder_panel_scripts/smp_editor_filesystem_dir.gd" id="3_013f6"]
[ext_resource type="PackedScene" uid="uid://b653hv0ua8e2c" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/label_class_name.tscn" id="3_80u8v"]
[ext_resource type="PackedScene" uid="uid://2fcyaxxjg8hx" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/container_folder.tscn" id="3_e5tvu"]
[ext_resource type="Texture2D" uid="uid://isgka4ucmwi4" path="res://addons/script_multi_plus/sme_images/godot_Folder.svg" id="3_psyut"]
[ext_resource type="PackedScene" uid="uid://hup0sgbk3lui" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/container_script.tscn" id="5_h7fli"]
[ext_resource type="PackedScene" uid="uid://nwfjuy18sch6" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/label_select_folder.tscn" id="7_kdktd"]
[ext_resource type="PackedScene" uid="uid://dnsfdw4h6tok0" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/label_script_size.tscn" id="7_lixlk"]
[ext_resource type="Texture2D" uid="uid://pxc771jyscgh" path="res://addons/script_multi_plus/sme_images/godot_ScriptExtend.svg" id="7_psyut"]
[ext_resource type="PackedScene" uid="uid://bt33bxecpskg8" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/line_edit_selected.tscn" id="8_7ss3o"]
[ext_resource type="PackedScene" uid="uid://ccvqfh3dgi8m1" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/default_button_open.tscn" id="8_qssv3"]
[ext_resource type="Script" uid="uid://daqc4rkug4m0r" path="res://addons/script_multi_plus/smp_scripts/smp_finder_panel_scripts/smp_button_text_empty.gd" id="9_x8ktd"]
[ext_resource type="PackedScene" uid="uid://dx1tcgkm1gox6" path="res://addons/script_multi_plus/smp_scenes/smp_finder_panel_scenes/label_script_info.tscn" id="10_xh6yu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5x52"]
bg_color = Color(0.122, 0.122, 0.125, 1)
border_width_left = 1
border_width_top = 20
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.184, 0.365, 0.533, 1)
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k5x52"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h7fli"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lm3gb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5tvu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wkejt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kdktd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sykqi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdktd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x8ktd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5tvu"]
bg_color = Color(0.6, 0.6, 0.6, 0.1)
border_color = Color(0.192, 0.192, 0.192, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lm3gb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1
border_color = Color(0.192, 0.192, 0.192, 1)

[node name="ScriptFindPopupPanel" type="PopupPanel"]
size = Vector2i(1049, 327)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_k5x52")
script = ExtResource("1_k5x52")

[node name="FindScript" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_80u8v")

[node name="EditorFilesystemDir" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_013f6")

[node name="MainContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 20.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxRoot" type="VBoxContainer" parent="MainContainer"]
z_index = 5
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GrabTopM" type="MarginContainer" parent="MainContainer/VBoxRoot"]
layout_mode = 2
theme_override_constants/margin_left = -9
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = -9

[node name="ButtonGrab" type="Button" parent="MainContainer/VBoxRoot/GrabTopM"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_k5x52")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h7fli")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lm3gb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e5tvu")
alignment = 0

[node name="FindMargin" type="MarginContainer" parent="MainContainer/VBoxRoot"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxRoot/FindMargin"]
layout_mode = 2

[node name="MClassInfo" type="MarginContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="VInfo" type="VBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HInfo" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="HInfoLeft" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo/HInfoLeft"]
layout_mode = 2

[node name="HExtends" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo" instance=ExtResource("2_wv3rm")]
unique_name_in_owner = true
layout_mode = 2

[node name="s" type="Control" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="HClassName" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo" instance=ExtResource("3_80u8v")]
unique_name_in_owner = true
layout_mode = 2

[node name="HInfoRight" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo/HInfoRight"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ButtonClose" type="Button" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/MClassInfo/VInfo/HInfo/HInfoRight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../RootFindHBox/FindHBox/MarginContainer/LineEditFind")
focus_neighbor_top = NodePath("../../../../../../../VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons/MButton3/ButtonAttach3")
focus_neighbor_bottom = NodePath("../../../../../../../SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer/ScriptContainer")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wkejt")
icon = ExtResource("1_aqt5k")
icon_alignment = 1

[node name="RootFindHBox" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer"]
layout_mode = 2

[node name="HFindLeft" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2

[node name="LabelSelectFolder" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox/HFindLeft" instance=ExtResource("7_kdktd")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="FindHBox" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="IconTextureFind" type="TextureRect" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox/FindHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture = ExtResource("2_h7fli")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox/FindHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEditFind" type="LineEdit" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox/FindHBox/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../../../../VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons/MButton3/ButtonAttach3")
focus_neighbor_right = NodePath("../../../../MClassInfo/VInfo/HInfo/HInfoRight/ButtonClose")
theme_override_font_sizes/font_size = 16
placeholder_text = " find...gd"

[node name="ButtonTextEmpty" type="Button" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox/FindHBox/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0.817945, 0.817945, 0.817945, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_kdktd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sykqi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kdktd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_x8ktd")
icon = ExtResource("1_aqt5k")
icon_alignment = 2
script = ExtResource("9_x8ktd")

[node name="HFindRight" type="HBoxContainer" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="LabelScriptSize" parent="MainContainer/VBoxRoot/FindMargin/VBoxContainer/RootFindHBox/HFindRight" instance=ExtResource("7_lixlk")]
unique_name_in_owner = true
layout_mode = 2

[node name="SplitContainer" type="SplitContainer" parent="MainContainer/VBoxRoot"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
theme_override_constants/minimum_grab_thickness = 10
theme_override_styles/split_bar_background = SubResource("StyleBoxFlat_e5tvu")
split_offset = 200

[node name="FolderContainer" parent="MainContainer/VBoxRoot/SplitContainer" instance=ExtResource("3_e5tvu")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptVBox" type="VBoxContainer" parent="MainContainer/VBoxRoot/SplitContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lm3gb")

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="RootScriptContainer" type="HBoxContainer" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="ScriptContainer" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer2" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer3" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer4" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer5" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer6" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer7" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScriptContainer8" parent="MainContainer/VBoxRoot/SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer" instance=ExtResource("5_h7fli")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxBottom" type="VBoxContainer" parent="MainContainer/VBoxRoot"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Panel" type="Panel" parent="MainContainer/VBoxRoot/VBoxBottom"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lm3gb")

[node name="RootHBox" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom"]
layout_mode = 2

[node name="MBottomLeft" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="HSpace" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomLeft"]
layout_mode = 2

[node name="VSCInfo" type="VBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomLeft/HSpace"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MSCInfo" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomLeft/HSpace/VSCInfo" instance=ExtResource("10_xh6yu")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 6
_info_type = "OPENED"

[node name="MSCInfo2" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomLeft/HSpace/VSCInfo" instance=ExtResource("10_xh6yu")]
unique_name_in_owner = true
layout_mode = 2

[node name="MSCInfo3" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomLeft/HSpace/VSCInfo" instance=ExtResource("10_xh6yu")]
unique_name_in_owner = true
layout_mode = 2
_info_type = "RECENT"

[node name="MSCInfo4" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomLeft/HSpace/VSCInfo" instance=ExtResource("10_xh6yu")]
unique_name_in_owner = true
layout_mode = 2
_info_type = "CURRENT"

[node name="MBottomCenter" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 12

[node name="HCenter" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="V" type="VBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V"]
layout_mode = 2

[node name="LineEditHBox" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="IconTextureSelect" type="TextureRect" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H/LineEditHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture = ExtResource("7_psyut")
stretch_mode = 5

[node name="LineEditSelected" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H/LineEditHBox" instance=ExtResource("8_7ss3o")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../../../../SplitContainer/ScriptVBox/ScrollContainer/RootScriptContainer/ScriptContainer")
focus_neighbor_right = NodePath("../../PathHBox/LineEditPath")
focus_neighbor_bottom = NodePath("../../../MButtons/HButtons/MButton/ButtonOpen")

[node name="Control" type="Control" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PathHBox" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="IconTexturePath" type="TextureRect" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H/PathHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture = ExtResource("3_psyut")
stretch_mode = 5

[node name="LineEditPath" type="LineEdit" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/H/PathHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../LineEditHBox/LineEditSelected")
focus_neighbor_right = NodePath("../../../MButtons/HButtons/MButton/ButtonOpen")
focus_neighbor_bottom = NodePath("../../../MButtons/HButtons/MButton3/ButtonAttach3")
theme_override_font_sizes/font_size = 13
placeholder_text = " res://..."

[node name="MButtons" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HButtons" type="HBoxContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons"]
layout_mode = 2
alignment = 1

[node name="S" type="Control" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MButton" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ButtonOpen" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons/MButton" instance=ExtResource("8_qssv3")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../MButton3/ButtonAttach3")
focus_neighbor_right = NodePath("../../MButton2/ButtonAttach2")
focus_neighbor_bottom = NodePath("../../../../../../../../../FindMargin/VBoxContainer/RootFindHBox/FindHBox/MarginContainer/LineEditFind")
focus_previous = NodePath("../../MButton3/ButtonAttach3")

[node name="MButton2" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ButtonAttach2" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons/MButton2" instance=ExtResource("8_qssv3")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../MButton/ButtonOpen")
focus_neighbor_right = NodePath("../../MButton3/ButtonAttach3")
focus_neighbor_bottom = NodePath("../../../../../../../../../FindMargin/VBoxContainer/RootFindHBox/FindHBox/MarginContainer/LineEditFind")
_button_open = "ATTACH_2"

[node name="MButton3" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ButtonAttach3" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox/MBottomCenter/HCenter/V/MButtons/HButtons/MButton3" instance=ExtResource("8_qssv3")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../MButton2/ButtonAttach2")
focus_neighbor_right = NodePath("../../MButton/ButtonOpen")
focus_neighbor_bottom = NodePath("../../../../../../../../../FindMargin/VBoxContainer/RootFindHBox/FindHBox/MarginContainer/LineEditFind")
focus_next = NodePath("../../MButton/ButtonOpen")
_button_open = "ATTACH_3"

[node name="MBottomRight" type="MarginContainer" parent="MainContainer/VBoxRoot/VBoxBottom/RootHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_constants/margin_top = 12
